td/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: td
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: td-deploy
  namespace: td
spec:
  replicas: 1
  selector:
    matchLabels:
      app: td-deploy
  template:
    metadata:
      labels:
        app: td-deploy
    spec:
      containers:
        - name: td
          image: ghcr.io/mvaldes14/task-manager:latest
          ports:
            - name: td-port
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /auth/status
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: td-deploy-mcp
  namespace: td
spec:
  replicas: 1
  selector:
    matchLabels:
      app: td-deploy-mcp
  template:
    metadata:
      labels:
        app: td-deploy-mcp
    spec:
      containers:
        - name: td
          image: ghcr.io/mvaldes14/task-manager-mcp:latest
          ports:
            - name: td-port-mcp
              containerPort: 8080
