td/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: td-svc
  namespace: td
spec:
  selector:
    app: td-deploy
  type: ClusterIP
  ports:
    - port: 80
      name: td-port
      protocol: TCP
      targetPort: 3000
